# ssd

./: .gitignore  .gitmodules  LICENSE  README.md
lab1/: Cargo.toml
lab1/src/: lib.rs  main.rs
lab2/: Cargo.toml  hashes.txt
lab2/src/: main.rs
lab3+4/: README.md
lab3+4/brute/: main.py  pyproject.toml
lab3+4/brute/logins+passwords/: passwords.txt  users.txt
lab3+4/code_review/: lab3.php
lab3+4/web_app_safe/: Cargo.toml  db_init.sh  rustfmt.toml  users.db
lab3+4/web_app_safe/src/: main.rs
lab3+4/web_app_safe/templates/: index.html
