[package]
name = "osul"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
clap = { version = "4.5.47", features = ["derive"] }
libc = "0.2.175"
predicates = "3.1.3"
serde_json = "1.0.145"
sysinfo = "0.37.0"
tempfile = "3.22.0"
xmltree = "0.11.0"
zip = "1.1.2"
fs2 = "0.4"
