[package]
name = "web-app-safe"
version = "0.1.0"
edition = "2024"
default-run = "web-app-safe"

[dependencies]
axum = "0.8.7"
bcrypt = "0.17.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-sessions = "0.14.0"
